--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>name.liwuest</groupId>
   <artifactId>util.misc</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>2019-07-02</version>
   <build>
     <plugins>
       <plugin>
