--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,18 @@
   <groupId>name.liwuest</groupId>
   <artifactId>util.misc</artifactId>
   <version>2019-07-02</version>
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>5.1.8.RELEASE</version>
+    </dependency>
+	<dependency>
+		<groupId>javax.persistence</groupId>
+		<artifactId>javax.persistence-api</artifactId>
+		<version>[2.2,2.3)</version>
+	</dependency>
+  </dependencies>
   <build>
     <plugins>
       <plugin>
